@@ -5,6 +5,7 @@ SUMMARY OF NEW FEATURES AND BUG FIXES SINCE V4.0
 Version 6.6 - not yet released
 * map
   - optional distinct map zoom on each page (#1603)
+  - add label selection "Task waypoints & airfields"
 * user interface
   - replay fast-forward
   - green InfoBox distance when inside observation zone (#2560)
